# ftu-rust-mixer

./: Cargo.toml  README.md  ftu-rust-mixer.desktop
docs/: ftu-rust-mixer.1
scripts/: install-binary.sh
src/: alsa_backend.rs  app.rs  config.rs  main.rs  models.rs  presets.rs
