[package]
name = "ftu-rust-mixer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
alsa = "0.10"
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.33", features = ["glow", "wgpu"] }
egui = "0.33"
regex = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alsa-sys = "0.3.1"
